--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_HUB_URL=https://testnet.snapshot.org
+VITE_HUB_URL=https://hub.snapshot.org
 VITE_IPFS_GATEWAY=gateway.ipfs.io
-VITE_DEFAULT_NETWORK=1
+VITE_DEFAULT_NETWORK=56
